[package]
name = "gpt-toolbox"
version = "4.1.0"
description = "A pure-Rust library to work with GPT partition tables. (Patches to support arbitrary sector sizes)"
documentation = "https://docs.rs/gpt-toolbox"
authors = [
	"Chris Ober <obercgit@gmail.com>",
	"Chris Holcombe <xfactor973@gmail.com>",
	"Luca Bruno <lucab@debian.org>",
	"Sören Meier <s@renmeier.ch>",
	"LIZARD-OFFICIAL-77 <lizard.official.77@gmail.com>",
]
license = "MIT"
repository = "https://github.com/aero-nas/gpt-toolbox"
edition = "2021"
exclude = ["tests/fixtures", "tests/gpt-real-disk.rs"]

[features]
# enable logging via the log crate
log = ["dep:log"]
# enable logging via the tracing crate
tracing = ["dep:tracing"]

[dependencies]
bitflags = "2.0"
crc = "3.0"
log = { version = "0.4.18", optional = true }
tracing = { version = "0.1.30", optional = true }
uuid = { version = "1.3.4", features = ["v4"] }
simple-bytes = "0.2.13"
nix = { version = "0.31.1", features = ["ioctl"] }

[dev-dependencies]
tempfile = "3.0"
